OJ/work_dir/1/error.txt
main.c: In function ‘main’:
main.c:6:20: error: expected identifier before ‘&’ token
 scanf("%d %d", &a. &b);
                    ^
